<resources>
    <string name="app_name">CategoryDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_following">following\'</string>
    <string name="follow">follow</string>
    <string name="tv_industry">industry</string>
    <string name="tv_theme">theme</string>
    <string name="tv_header">header</string>
</resources>